--- a/index.dev.html
+++ b/index.dev.html
@@ -208,13 +208,41 @@
         </section>
 
 
+        <!-- UNI:TYPE:generic (always scraped when generating styleguide) -->
+        <!-- ******************************************************************* -->
+        <!-- BUTTON SHAPES ***************************************************** -->
+        <!-- ******************************************************************* -->
+        <section class="showcase">
+            <hgroup>
+                <h3>Panel Shapes</h3>
+            </hgroup>
+
+            <section class="gallery">
+                <div class="panel panel-primary panel-square">
+                    <h2>This is a square panel.</h2>
+                    <p>This is some content in the panel.</p>
+                </div>
+                <div class="panel panel-primary panel-circle">
+                    <h2>A circular panel.</h2>
+                </div>
+            </section>
+            <pre class="prettyprint linenums">
+                &lt;div class=&quot;panel panel-primary panel-square&quot;&gt;
+                  &lt;h2&gt;This is a tiny panel.&lt;/h2&gt;
+                  &lt;p&gt;This is some more content in the panel.&lt;/p&gt;
+                &lt;/div&gt;
+                &lt;div class=&quot;panel panel-primary panel-square&quot;&gt;
+                  &lt;h2&gt;This is a small panel.&lt;/h2&gt;
+                  &lt;p&gt;This is some more content in the panel.&lt;/p&gt;
+                &lt;/div&gt;
+            </pre>
+        </section>
 
 
         <!-- UNI:TYPE:generic (always scraped when generating styleguide) -->
         <!-- ******************************************************************* -->
         <!-- BUTTON SIZES ***************************************************** -->
         <!-- ******************************************************************* -->
-
         <section class="showcase">
             <hgroup>
                 <h3>Panel Sizes</h3>
@@ -248,7 +276,7 @@
                   &lt;p&gt;This is some more content in the panel.&lt;/p&gt;
                 &lt;/div&gt;
             </pre>
-</section>
+        </section>
 
 
 
